fix: CGPA input field is changed to number type from any text type
Co-authored-by: Soumyodeep-Das <linux.programmer.06@gmail.com>
Co-authored-by: SattikBhowmick25 <sattikbhowmick2002@gmail.com>

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </div>
                             <div class="field">
                                 <b><p>CGPA (OR PERCENTAGE)</p></b>
-                                <input type="text" class="inp" id="marks" name="marks" placeholder="Enter here">
+                                <input type="number" class="inp" id="marks" name="marks" placeholder="Enter here">
                             </div>
                             <div class="field">
                                 <b><p>GRADUATION DATE (OR EXPECTED GRADUATION DATE)</p></b>
