--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                             </div>
                             <div class="field">
                                 <b><p>GRADUATION DATE (OR EXPECTED GRADUATION DATE)</p></b>
-                                <input type="text" class="inp" id="grad-date" name="grad-date" placeholder="Enter Month and Year">
-                            </div>
+                                <input type="month" class="inp" id="grad-date" name="grad-date" placeholder="Enter Month and Year">
+                            </div>                            
                         </div>
                     </div>
                     <div class="section prof">
