fix: issue #3 is fixed, now generated pdfs now have all stylings as shown on the page
Co-authored-by: Soumyodeep-Das <linux.programmer.06@gmail.com>
Co-authored-by: SattikBhowmick25 <sattikbhowmick2002@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 </head>
 <body>
     <div class="container">
