--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Generator</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="templateStyle.css">
-    <link rel="stylesheet" href="responsiveStyle.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/templateStyle.css">
+    <link rel="stylesheet" href="./styles/responsiveStyle.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
@@ -131,13 +131,13 @@
     <!-- Resume template selector -->
     <div class="tempSelector">
         <div class="temp" id="temp1">
-            <img class="tempPic" id="tempPic1" src="template1.png" alt="" value="1">
+            <img class="tempPic" id="tempPic1" src="./assets/template1.png" alt="" value="1">
         </div>
         <div class="temp" id="temp2">
-            <img class="tempPic" id="tempPic2" src="template2.png" alt="" value="2">
+            <img class="tempPic" id="tempPic2" src="./assets/template2.png" alt="" value="2">
         </div>
         <div class="temp" id="temp3">
-            <img class="tempPic" id="tempPic3" src="template3.png" alt="" value="3">
+            <img class="tempPic" id="tempPic3" src="./assets/template3.png" alt="" value="3">
         </div>
     </div>
 
@@ -209,7 +209,7 @@
     
     
     </div>
-    <script src="script.js"></script>
-    <script src="tempScript.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/tempScript.js"></script>
 </body>
 </html>
